# kodo-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  kill.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
crews/dev/: README.md
crews/published/: README.md
docs/: README.md  template.yaml
kodo/: cli.py  common.py  config.py  datatypes.py  error.py  helper.py  interrupt.py  log.py  types.py
kodo/core/: config.py  engine.py  koco.py  log.py
kodo/core/tmpl/: output.tmpl
kodo/flow/: simple.py
kodo/remote/: enter.py  executor.py  launcher.py  result.py
kodo/service/: controller.py  flow.py  node.py  routes.py  signal.py
kodo/service/route/: execute.py  flow.py  main.py
kodo/service/security/: __init__.py  auth_middleware.py  jwt.py
kodo/service/static/: event.html  kodo.css  kodo.js  kodosumi.css
kodo/service/templates/: _main.html  enter.html  error.html  execution.html  explore.html  flows.html  home.html  jobs.html  launch.html  status.html  status.htmx
kodo/worker/: act.py  base.py  execute.py  flow.py  handler.py  loader.py  main.py  pager.py  process.py  result.py
kodo/worker/instrument/: formatter.py  result.py
kodo/worker/process/: act.py  caller.py  execute.py  executor.py  launcher.py  node.py
tests/: 20241224.Mesh.ipynb  20241226.Protocol.ipynb  crew2.py  crew3.py  example1.ipynb  flows.py  registry1.json  registry2.json  simple.py  test.py  test_auth.py  test_crew.py  test_node.py  test_remote.py  test_service.py  test_worker.py
tests/assets/: agent50.py  agent50.yaml  flow0.yaml  jwks_certs.json  node.yaml  private.key.json  public.cert.json  registry.yaml  research.yaml  test.yaml
tests/example2/: example2.ipynb  node1.yaml  node2.yaml
tests/example3/: README.md  node3.yaml  node4.yaml
tests/example4/: crew.py
tests/shared/: __init__.py  wrappers.py
