[build-system]
requires = ["setuptools>=42", "wheel"]

[project]
name = "kodo"
version = "0.0.0"
description = "kodosumi is a framework to execute and orchestrate intelligent agents safe and at scale."
readme = "README.md"
license = {text = "MPL-2.0"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "click",
    "crewai==0.86.*",
    "crewai_tools==0.17.*",
    "pydantic",
    "pydantic-settings",
    "litestar[standard]",
    "bson",
    "ray[default]",
    "psutil",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpserver",
    "isort",
    "autopep8",
]