[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["kodo"]
namespaces = true

[project]
name = "kodo-core"
version = "0.0.0"
description = "kodosumi framework to execute and orchestrate agentic services safe and at scale"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "requests",
    "click",
    "crewai==0.86.*",
    "crewai_tools==0.17.*",
    "pydantic",
    "pydantic-settings",
    "litestar[standard]",
    "bson",
    "ray[default]==2.41.*",
    "psutil",
    "aiofiles"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
    "pytest-httpserver",
    "isort",
    "autopep8",
    "pytest_httpserver"
]

[tool.setuptools.package-data]
"kodo.service" = ["static/**/*", "templates/*"]